# LoGeR_cpp

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  setup.sh
app/: main.cpp
include/loger/io/: image_loader.hpp  output_writer.hpp  weight_loader.hpp
include/loger/model/: block_rope.hpp  encoder.hpp  pi3.hpp  task_heads.hpp  ttt.hpp
include/loger/ops/: attention.hpp  mlp.hpp  rope2d.hpp
include/loger/utils/: geometry.hpp  windowing.hpp
scripts/: anchor_merge.py  build_run_compare.sh  compare_debug.py  compare_decoder_layers.py  compare_output.py  compare_vis.py  convert_checkpoint.py  debug_tensors.py  diagnose_merge.py  merge_windows.py  test_conf_decoder_isolation.py  visualize.py
src/io/: image_loader.cpp  output_writer.cpp  weight_loader.cpp
src/model/: block_rope.cpp  encoder.cpp  pi3.cpp  task_heads.cpp  ttt.cpp
src/ops/: attention.cpp  rope2d.cpp
src/utils/: geometry.cpp  windowing.cpp
tests/: test_e2e.cpp  test_encoder.cpp  test_rope2d.cpp  test_ttt.cpp
